--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,1 +1,21 @@
-<header></header>
+<header>
+  <ul style="display: flex; justify-content: end; gap: 10px; list-style: none;">
+    {% if not request.user.is_authenticated %}
+      <li>
+        <a href="{% url "users:register" %}">Регистрация</a>
+      </li>
+      <li>
+        <a href="{% url "users:login" %}">Войти</a>
+      </li>
+    {% endif %}
+    {% if request.user.is_authenticated %}
+      <li>
+        <form action="{% url "users:logout" %}" method="post">
+          {% csrf_token %}
+          <button type="submit">Выйти</button>
+        </form>
+      </li>
+    {% endif %}
+
+  </ul>
+</header>
