feat(cards): add get_absolute_url for Card  and use it in card_list template

--- a/cards/templates/cards/card_list.html
+++ b/cards/templates/cards/card_list.html
@@ -4,23 +4,22 @@
 
 {% block content %}
 
-<h1>Список карточек</h1>
+  <h1>Список карточек</h1>
 
-<ul>
-  {% for card in cards %}
-  <li>
-    <h4>
-      <a href="#">
-        {{ card.front }}
-      </a>
-    </h4>
-  </li>
-  {% empty %}
-    <li>
-      Карточек нету
-    </li>
-  {% endfor %}
-
-</ul>
+  <ul>
+    {% for card in cards %}
+      <li>
+        <h4>
+          <a href="{{ card.get_absolute_url }}">
+            {{ card.front }}
+          </a>
+        </h4>
+      </li>
+    {% empty %}
+      <li>
+        Карточек нету
+      </li>
+    {% endfor %}
+  </ul>
 
 {% endblock content %}
