--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -1,21 +1,25 @@
 <header>
-  <ul style="display: flex; justify-content: end; gap: 10px; list-style: none;">
-    {% if not request.user.is_authenticated %}
-      <li>
-        <a href="{% url "users:register" %}">Регистрация</a>
-      </li>
-      <li>
-        <a href="{% url "users:login" %}">Войти</a>
-      </li>
-    {% endif %}
+  <div style="display: flex; justify-content: space-between; align-items: center; gap: 10px; list-style: none;">
+
     {% if request.user.is_authenticated %}
-      <li>
-        <form action="{% url "users:logout" %}" method="post">
-          {% csrf_token %}
-          <button type="submit">Выйти</button>
-        </form>
-      </li>
+      <ul style="list-style: none; padding: 0;">
+        <li><a href="{% url "cards:card_list" %}">Список карточек</a></li>
+      </ul>
     {% endif %}
 
-  </ul>
+    <ul style="display: flex; gap: 10px; list-style: none; margin-left: auto; padding: 0;">
+      {% if not request.user.is_authenticated %}
+        <li><a href="{% url "users:register" %}">Регистрация</a></li>
+        <li><a href="{% url "users:login" %}">Войти</a></li>
+      {% else %}
+        <li>
+          <form action="{% url "users:logout" %}" method="post">
+            {% csrf_token %}
+            <button type="submit">Выйти</button>
+          </form>
+        </li>
+      {% endif %}
+    </ul>
+
+  </div>
 </header>
