--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -2,8 +2,9 @@
   <div style="display: flex; justify-content: space-between; align-items: center; gap: 10px; list-style: none;">
 
     {% if request.user.is_authenticated %}
-      <ul style="list-style: none; padding: 0;">
+      <ul style="display: flex; gap: 10px; list-style: none; padding: 0;">
         <li><a href="{% url "cards:card_list" %}">Список карточек</a></li>
+        <li><a href="{% url "projects:project_list" %}">Список проектов</a></li>
       </ul>
     {% endif %}
 
