feat(nav): add link to user list

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -5,6 +5,7 @@
       <ul style="display: flex; gap: 10px; list-style: none; padding: 0;">
         <li><a href="{% url "cards:card_list" %}">Список карточек</a></li>
         <li><a href="{% url "projects:project_list" %}">Список проектов</a></li>
+        <li><a href="{% url "users:user_list" %}">Список пользователей</a></li>
       </ul>
     {% endif %}
 
