--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -6,6 +6,13 @@
 
   <h1>Список проектов</h1>
 
+  <div>
+    <form method="get">
+      <input type="text" name="query">
+      <button type="submit">Поиск</button>
+    </form>
+  </div>
+
   <ul>
     {% for project in projects %}
       <li>
