--- a/users/templates/users/user_list.html
+++ b/users/templates/users/user_list.html
@@ -6,6 +6,13 @@
 
   <h1>Список пользователей</h1>
 
+  <div>
+    <form method="get">
+      <input type="text" name="query">
+      <button type="submit">Поиск</button>
+    </form>
+  </div>
+
   <ul>
     {% for user in users %}
       <li>
