--- a/cards/templates/cards/card_list.html
+++ b/cards/templates/cards/card_list.html
@@ -18,7 +18,7 @@
       <li>
         <h4>
           <a href="{{ card.get_absolute_url }}">
-            {{ card.front }}
+            {{ card.question }}
           </a>
         </h4>
       </li>
