--- a/users/templates/users/user_cards.html
+++ b/users/templates/users/user_cards.html
@@ -11,7 +11,7 @@
       <li>
         <h4>
           <a href="{{ card.get_absolute_url }}">
-            {{ card.front }}
+            {{ card.question }}
           </a>
         </h4>
       </li>
