feat(cardsets): add links to cardsets
- Added link to cardsets in header
- Added link to cardsets in user profile

--- a/users/templates/users/user_detail.html
+++ b/users/templates/users/user_detail.html
@@ -8,6 +8,7 @@
 
   <div>
     <a href="{% url "users:user_cards" user.id %}">Карточки пользователя</a>
+    <a href="{% url "users:user_cardsets" user.id %}">Наборы карточек пользователя</a>
     <a href="{% url "users:user_projects" user.id %}">Проекты пользователя</a>
   </div>
 
