--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -4,6 +4,7 @@
     {% if request.user.is_authenticated %}
       <ul style="display: flex; gap: 10px; list-style: none; padding: 0;">
         <li><a href="{% url "cards:card_list" %}">Список карточек</a></li>
+        <li><a href="{% url "cardsets:cardset_list" %}">Список наборов карточек</a></li>
         <li><a href="{% url "projects:project_list" %}">Список проектов</a></li>
         <li><a href="{% url "users:user_list" %}">Список пользователей</a></li>
       </ul>
