--- a/cards/templates/cards/card_list.html
+++ b/cards/templates/cards/card_list.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load card_tags %}
+
 
 {% block title %}Список карточек{% endblock title %}
 
@@ -16,11 +18,7 @@
   <ul>
     {% for card in cards %}
       <li>
-        <h4>
-          <a href="{{ card.get_absolute_url }}">
-            {{ card.question }}
-          </a>
-        </h4>
+        {% render_card card %}
       </li>
     {% empty %}
       <li>
