--- a/cards/templates/cardsets/cardset_detail.html
+++ b/cards/templates/cardsets/cardset_detail.html
@@ -1,4 +1,6 @@
 {% extends "base.html" %}
+{% load card_tags %}
+
 
 {% block title %}{{ cardset.title }}{% endblock title %}
 
@@ -10,11 +12,7 @@
       <ul>
       {% for card in cards %}
         <li>
-          <h4>
-            <a href="{{ card.get_absolute_url }}">
-              {{ card.question }}
-            </a>
-          </h4>
+          {% render_card card %}
         </li>
       {% empty %}
         <li>
