--- a/users/templates/users/user_cards.html
+++ b/users/templates/users/user_cards.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load card_tags %}
 
 {% block title %}Карточки {{ user.username }}{% endblock title %}
 
@@ -9,11 +10,7 @@
   <ul>
     {% for card in cards %}
       <li>
-        <h4>
-          <a href="{{ card.get_absolute_url }}">
-            {{ card.question }}
-          </a>
-        </h4>
+        {% render_card card %}
       </li>
     {% empty %}
       <li>
