--- a/cards/templates/cardsets/cardset_list.html
+++ b/cards/templates/cardsets/cardset_list.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load cardset_tags %}
 
 {% block title %}Список наборов карточек{% endblock title %}
 
@@ -16,11 +17,7 @@
   <ul>
     {% for cardset in cardsets %}
       <li>
-        <h4>
-          <a href="{{ cardset.get_absolute_url }}">
-            {{ cardset.title }}
-          </a>
-        </h4>
+        {% render_cardset cardset %}
       </li>
     {% empty %}
       <li>
