refactor(cards): add div wrapper around card and cardset components

--- a/cards/templates/cards/components/card.html
+++ b/cards/templates/cards/components/card.html
@@ -1,5 +1,7 @@
-<h4>
-  <a href="{{ card.get_absolute_url }}">
-    {{ card.question }}
-  </a>
-</h4>
+<div>
+  <h4>
+    <a href="{{ card.get_absolute_url }}">
+      {{ card.question }}
+    </a>
+  </h4>
+</div>
