--- a/cards/templates/cardsets/components/cardset.html
+++ b/cards/templates/cardsets/components/cardset.html
@@ -1,5 +1,7 @@
-<h4>
-  <a href="{{ cardset.get_absolute_url }}">
-    {{ cardset.title }}
-  </a>
-</h4>
+<div>
+  <h4>
+    <a href="{{ cardset.get_absolute_url }}">
+      {{ cardset.title }}
+    </a>
+  </h4>
+</div>
