feat(cards): allow users to save and remove cards
- Add saved_by attribute to Card model
- Add URLs and views to save, remove, and toggle cards
- Add is_saved flag to check if card is saved
- Add button to save and remove card in card_detail.html
- Apply migrations

--- a/cards/templates/cards/card_detail.html
+++ b/cards/templates/cards/card_detail.html
@@ -10,4 +10,21 @@
     <p>Последнее обновление: <span>{{ card.updated_at }}</span></p>
   </div>
 
+  <div>
+    {% comment %}
+      TODO: отправлять AJAX запрос на card_toggle_save
+    {% endcomment %}
+    {% if not is_saved %}
+      <form action="{% url "cards:card_save" card.id %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Сохранить в мой профиль</button>
+      </form>
+    {% else %}
+      <form action="{% url "cards:card_remove" card.id %}" method="post">
+        {% csrf_token %}
+        <button type="submit">Удалить из моего профиля</button>
+      </form>
+    {% endif %}
+  </div>
+
 {% endblock content %}
