--- a/templates/base.html
+++ b/templates/base.html
@@ -1,3 +1,4 @@
+{% load static %}
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -14,5 +15,11 @@
   </main>
 
   {% include "partials/footer.html" %}
+
+  
+  <script src="{% static "js/js.cookie.min.js" %}"></script>
+  
+  {% block scripts %}
+  {% endblock scripts %}
 </body>
 </html>
