--- a/cards/templates/cards/card_detail.html
+++ b/cards/templates/cards/card_detail.html
@@ -1,30 +1,32 @@
 {% extends "base.html" %}
+{% load static %}
 
 {% block title %}{{ card.question }}{% endblock title %}
 
 {% block content %}
 
   <h1>{{ card.question }}</h1>
+
   <div>
     <p>Дата создания: <span>{{ card.created_at }}</span></p>
     <p>Последнее обновление: <span>{{ card.updated_at }}</span></p>
   </div>
 
   <div>
-    {% comment %}
-      TODO: отправлять AJAX запрос на card_toggle_save
-    {% endcomment %}
-    {% if not is_saved %}
-      <form action="{% url "cards:card_save" card.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Сохранить в мой профиль</button>
-      </form>
-    {% else %}
-      <form action="{% url "cards:card_remove" card.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Удалить из моего профиля</button>
-      </form>
-    {% endif %}
+    <form action="{% url "cards:card_toggle_save" card.id %}" method="post" data-js-toggle-save-form>
+      {% csrf_token %}
+      <button type="submit" data-js-toggle-button>
+        {% if not is_saved %}
+          Сохранить в мой профиль
+        {% else %}
+          Удалить из моего профиля
+        {% endif %}
+      </button>
+    </form>
   </div>
 
 {% endblock content %}
+
+{% block scripts %}
+  <script src="{% static "cards/js/toggle_save.js" %}"></script>
+{% endblock scripts %}
