--- a/cards/templates/cardsets/cardset_detail.html
+++ b/cards/templates/cardsets/cardset_detail.html
@@ -1,4 +1,5 @@
 {% extends "base.html" %}
+{% load static %}
 {% load card_tags %}
 
 
@@ -23,20 +24,16 @@
   </div>
 
   <div>
-    {% comment %}
-      TODO: отправлять AJAX запрос на cardset_toggle_save
-    {% endcomment %}
-    {% if not is_saved %}
-      <form action="{% url "cardsets:cardset_save" cardset.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Сохранить в мой профиль</button>
-      </form>
-    {% else %}
-      <form action="{% url "cardsets:cardset_remove" cardset.id %}" method="post">
-        {% csrf_token %}
-        <button type="submit">Удалить из моего профиля</button>
-      </form>
-    {% endif %}
+    <form action="{% url "cardsets:cardset_toggle_save" cardset.id %}" method="post" data-js-toggle-save-form>
+      {% csrf_token %}
+      <button type="submit" data-js-toggle-button>
+        {% if not is_saved %}
+          Сохранить в мой профиль
+        {% else %}
+          Удалить из моего профиля
+        {% endif %}
+      </button>
+    </form>
   </div>
 
   <div>
@@ -45,3 +42,7 @@
   </div>
 
 {% endblock content %}
+
+{% block scripts %}
+  <script src="{% static "cards/js/toggle_save.js" %}"></script>
+{% endblock scripts %}
