--- a/cards/templates/cards/cards/card_detail.html
+++ b/cards/templates/cards/cards/card_detail.html
@@ -13,16 +13,20 @@
   </div>
 
   <div>
-    <form action="{% url "cards:card_toggle_save" card.id %}" method="post" data-js-toggle-save-form>
-      {% csrf_token %}
-      <button type="submit" data-js-toggle-button>
-        {% if not is_saved %}
-          Сохранить в мой профиль
-        {% else %}
-          Удалить из моего профиля
-        {% endif %}
-      </button>
-    </form>
+    {% if not card.author == request.user %}
+      <form action="{% url "cards:card_toggle_save" card.id %}" method="post" data-js-toggle-save-form>
+        {% csrf_token %}
+        <button type="submit" data-js-toggle-button>
+          {% if not is_saved %}
+            Сохранить в мой профиль
+          {% else %}
+            Удалить из моего профиля
+          {% endif %}
+        </button>
+      </form>
+    {% else %}
+      <p>Вы автор этой карточки</p>
+    {% endif %}
   </div>
 
 {% endblock content %}
