--- a/cards/templates/cards/cardsets/cardset_detail.html
+++ b/cards/templates/cards/cardsets/cardset_detail.html
@@ -48,5 +48,5 @@
 {% endblock content %}
 
 {% block scripts %}
-  <script src="{% static "cards/js/toggle_save.js" %}"></script>
+  <script src="{% static "cards/js/form_toggles.js" %}"></script>
 {% endblock scripts %}
