feat(cards): include form_toggle.js script for ajax toggle save card

--- a/cards/templates/cards/cards/card_detail.html
+++ b/cards/templates/cards/cards/card_detail.html
@@ -32,5 +32,5 @@
 {% endblock content %}
 
 {% block scripts %}
-  <script src="{% static "cards/js/toggle_save.js" %}"></script>
+  <script src="{% static "cards/js/form_toggles.js" %}"></script>
 {% endblock scripts %}
