--- a/users/templates/users/users/user_projects.html
+++ b/users/templates/users/users/user_projects.html
@@ -1,10 +1,10 @@
 {% extends "base.html" %}
 
-{% block title %}Проекты {{ user.username }}{% endblock title %}
+{% block title %}Проекты {{ current_user.username }}{% endblock title %}
 
 {% block content %}
 
-  <h1>Проекты {{ user.username }}</h1>
+  <h1>Проекты {{ current_user.username }}</h1>
 
   <ul>
     {% for project in projects %}
