--- a/projects/templates/projects/project_form.html
+++ b/projects/templates/projects/project_form.html
@@ -6,7 +6,7 @@
 
 <h1>Форма проекта</h1>
 
-  <form method="post">
+  <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
     <button type="submit">Сохранить</button>
