refactor(users): change user variable name int users views and templates

--- a/users/templates/users/users/user_cardsets.html
+++ b/users/templates/users/users/user_cardsets.html
@@ -3,17 +3,18 @@
 {% load cardset_tags %}
 
 
-{% block title %}Наборы карточек {{ current_user.username }}{% endblock title %}
+{% block title %}Наборы карточек {{ user.username }}{% endblock title %}
 
 {% block content %}
 
-  <h1>Наборы карточек {{ current_user.username }}</h1>
+  <h1>Наборы карточек {{ user.username }}</h1>
 
   <ul>
-    {% for cardset in cardsets %}
+    {% for cardset in user_cardsets %}
       <li>
         {% render_cardset cardset %}
-        {% if current_user == request.user %}
+        {% comment %} TODO: Перенести форму в profile_detail {% endcomment %}
+        {% comment %} {% if user == request.user %}
           <form action="{% url "cardsets:cardset_toggle_study" cardset.id %}" method="post" data-js-toggle-save-form>
             {% csrf_token %}
             <button type="submit" data-js-toggle-button>
@@ -24,7 +25,7 @@
               {% endif %}
             </button>
           </form>
-        {% endif %}
+        {% endif %} {% endcomment %}
       </li>
     {% empty %}
       <li>
