--- a/users/templates/users/users/user_cards.html
+++ b/users/templates/users/users/user_cards.html
@@ -1,14 +1,14 @@
 {% extends "base.html" %}
 {% load card_tags %}
 
-{% block title %}Карточки {{ current_user.username }}{% endblock title %}
+{% block title %}Карточки {{ user.username }}{% endblock title %}
 
 {% block content %}
 
-  <h1>Карточки {{ current_user.username }}</h1>
+  <h1>Карточки {{ user.username }}</h1>
 
   <ul>
-    {% for card in cards %}
+    {% for card in user_cards %}
       <li>
         {% render_card card %}
       </li>
