--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -15,7 +15,7 @@
         <li><a href="{% url "users:register" %}">Регистрация</a></li>
         <li><a href="{% url "users:login" %}">Войти</a></li>
       {% else %}
-        <li><a href="{% url "users:user_detail" request.user.id %}">Мой профиль</a></li>
+        <li><a href="{% url "users:profile_detail" %}">Мой профиль</a></li>
         <li>
           <form action="{% url "users:logout" %}" method="post">
             {% csrf_token %}
