feat(users): add edit profile urls, views, form and url
- add edit profile url
- add profile_update view
- add UserForm
- add link to edit profile in header
- add profile_form template

--- a/templates/partials/header.html
+++ b/templates/partials/header.html
@@ -16,6 +16,7 @@
         <li><a href="{% url "users:login" %}">Войти</a></li>
       {% else %}
         <li><a href="{% url "users:profile_detail" %}">Мой профиль</a></li>
+        <li><a href="{% url "users:profile_update" %}">Редактировать профиль</a></li>
         <li>
           <form action="{% url "users:logout" %}" method="post">
             {% csrf_token %}
