--- a/users/templates/users/profile/profile_cards.html
+++ b/users/templates/users/profile/profile_cards.html
@@ -7,6 +7,13 @@
 
   <h1>Мои карточки</h1>
 
+  <div>
+    <form method="get">
+      <input type="text" name="query">
+      <button type="submit">Поиск</button>
+    </form>
+  </div>
+
   <ul>
     {% for card in user_cards %}
       <li>
