--- a/users/templates/users/profile/profile_cardsets.html
+++ b/users/templates/users/profile/profile_cardsets.html
@@ -9,6 +9,14 @@
 
   <h1>Мои наборы карточек</h1>
 
+  <div>
+    <form method="get">
+      <input type="text" name="query">
+      <button type="submit">Поиск</button>
+    </form>
+  </div>
+
+
   <ul>
     {% for cardset in user_cardsets %}
       <li>
