--- a/users/templates/users/profile/profile_projects.html
+++ b/users/templates/users/profile/profile_projects.html
@@ -6,6 +6,13 @@
 
   <h1>Мои проекты</h1>
 
+  <div>
+    <form method="get">
+      <input type="text" name="query">
+      <button type="submit">Поиск</button>
+    </form>
+  </div>
+
   <ul>
     {% for project in user_projects %}
       <li>
