--- a/users/templates/users/users/user_cardsets.html
+++ b/users/templates/users/users/user_cardsets.html
@@ -9,6 +9,13 @@
 
   <h1>Наборы карточек {{ user.username }}</h1>
 
+  <div>
+    <form method="get">
+      <input type="text" name="query">
+      <button type="submit">Поиск</button>
+    </form>
+  </div>
+
   <ul>
     {% for cardset in user_cardsets %}
       <li>
