--- a/users/templates/users/users/user_detail.html
+++ b/users/templates/users/users/user_detail.html
@@ -12,4 +12,24 @@
     <a href="{% url "users:user_projects" user.id %}">Проекты пользователя</a>
   </div>
 
+  <h2>Статистика по профилю</h2>
+
+  <div>
+    <div>
+      <span>Всего карточек: {{ cards_stats.total }}</span>
+      <span>Создано карточек: {{ cards_stats.created }}</span>
+      <span>Сохранено карточек: {{ cards_stats.saved }}</span>
+      <span>В изучении: {{ cards_stats.in_study }}</span>
+    </div>
+    <div>
+      <span>Всего наборов: {{ cardsets_stats.total }}</span>
+      <span>Создано наборов: {{ cardsets_stats.created }}</span>
+      <span>Сохранено наборов: {{ cardsets_stats.saved }}</span>
+      <span>В изучении: {{ cardsets_stats.in_study }}</span>
+    </div>
+    <div>
+      <span>Всего проектов: {{ projects_stats.total }}</span>
+    </div>
+  </div>
+
 {% endblock content %}
