--- a/cards/templates/cards/cards/card_list.html
+++ b/cards/templates/cards/cards/card_list.html
@@ -7,10 +7,13 @@
 {% block content %}
 
   <h1>Список карточек</h1>
-
   <div>
     <form method="get">
-      <input type="text" name="query">
+      <input type="text" name="query" placeholder="Что такое итератор?" value={{ request.GET.query|default:'' }}>
+      <select name="sort_by">
+        <option value="newest" {% if request.GET.sort_by == 'newest' %}selected{% endif %}>Сначала новые</option>
+        <option value="oldest" {% if request.GET.sort_by == 'oldest' %}selected{% endif %}>Сначала старые</option>
+      </select>
       <button type="submit">Поиск</button>
     </form>
   </div>
