feat(cardsets): add order box for sort cardsets and placeholder for search input
- Added placeholder for search input
- Added select to cardset_list, profile and user cardsets templates
- Added logic to sort cardsets in card_list, profile and  user cardsets views

--- a/cards/templates/cards/cardsets/cardset_list.html
+++ b/cards/templates/cards/cardsets/cardset_list.html
@@ -9,7 +9,11 @@
 
   <div>
     <form method="get">
-      <input type="text" name="query">
+      <input type="text" name="query" placeholder="Циклы в python" value={{ request.GET.query|default:'' }}>
+      <select name="sort_by">
+        <option value="newest" {% if request.GET.sort_by == 'newest' %}selected{% endif %}>Сначала новые</option>
+        <option value="oldest" {% if request.GET.sort_by == 'oldest' %}selected{% endif %}>Сначала старые</option>
+      </select>
       <button type="submit">Поиск</button>
     </form>
   </div>
