--- a/projects/templates/projects/project_list.html
+++ b/projects/templates/projects/project_list.html
@@ -8,7 +8,11 @@
 
   <div>
     <form method="get">
-      <input type="text" name="query">
+      <input type="text" name="query" placeholder="Сервис сокращения ссылок на fastapi" value={{ request.GET.query|default:'' }}>
+      <select name="sort_by">
+        <option value="newest" {% if request.GET.sort_by == 'newest' %}selected{% endif %}>Сначала новые</option>
+        <option value="oldest" {% if request.GET.sort_by == 'oldest' %}selected{% endif %}>Сначала старые</option>
+      </select>
       <button type="submit">Поиск</button>
     </form>
   </div>
