--- a/users/templates/users/users/user_list.html
+++ b/users/templates/users/users/user_list.html
@@ -8,7 +8,11 @@
 
   <div>
     <form method="get">
-      <input type="text" name="query">
+      <input type="text" name="query" placeholder="Имя пользователя, направление или навык" value={{ request.GET.query|default:'' }}>
+      <select name="sort_by">
+        <option value="username_asc" {% if request.GET.sort_by == 'username_asc' %}selected{% endif %}>По имени (А-Я)</option>
+        <option value="username_desc" {% if request.GET.sort_by == 'username_desc' %}selected{% endif %}>По имени (Я-А)</option>
+      </select>
       <button type="submit">Поиск</button>
     </form>
   </div>
