--- a/cards/templates/cards/cards/card_list.html
+++ b/cards/templates/cards/cards/card_list.html
@@ -19,7 +19,7 @@
   </div>
 
   <ul>
-    {% for card in cards %}
+    {% for card in page_obj %}
       <li>
         {% render_card card %}
       </li>
@@ -29,5 +29,19 @@
       </li>
     {% endfor %}
   </ul>
+
+<div>
+  {% if page_obj.has_previous %}
+    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+  {% endif %}
+
+  <span>
+    Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+  </span>
+
+  {% if page_obj.has_next %}
+    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+  {% endif %}
+</div>
 
 {% endblock content %}
