--- a/users/templates/users/users/user_cardsets.html
+++ b/users/templates/users/users/user_cardsets.html
@@ -21,7 +21,7 @@
   </div>
 
   <ul>
-    {% for cardset in user_cardsets %}
+    {% for cardset in page_obj %}
       <li>
         {% render_cardset cardset %}
       </li>
@@ -31,5 +31,19 @@
       </li>
     {% endfor %}
   </ul>
+
+<div>
+  {% if page_obj.has_previous %}
+    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+  {% endif %}
+
+  <span>
+    Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+  </span>
+
+  {% if page_obj.has_next %}
+    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+  {% endif %}
+</div>
 
 {% endblock content %}
