--- a/users/templates/users/users/user_list.html
+++ b/users/templates/users/users/user_list.html
@@ -18,7 +18,7 @@
   </div>
 
   <ul>
-    {% for user in users %}
+    {% for user in page_obj %}
       <li>
         <h4>
           <a href="{{ user.get_absolute_url }}">
@@ -32,5 +32,19 @@
       </li>
     {% endfor %}
   </ul>
+
+<div>
+  {% if page_obj.has_previous %}
+    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+  {% endif %}
+
+  <span>
+    Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+  </span>
+
+  {% if page_obj.has_next %}
+    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+  {% endif %}
+</div>
 
 {% endblock content %}
