--- a/devshub_project/users/templates/users/profile/profile_cardsets.html
+++ b/devshub_project/users/templates/users/profile/profile_cardsets.html
@@ -22,7 +22,7 @@
 
 
   <ul>
-    {% for cardset in page_obj %}
+    {% for cardset in user_cardsets %}
       <li>
         {% render_cardset cardset %}
           <form action="{% url "cardsets:cardset_toggle_study" cardset.id %}" method="post" data-js-toggle-save-form>
@@ -44,16 +44,16 @@
   </ul>
 
 <div>
-  {% if page_obj.has_previous %}
-    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+  {% if user_cardsets.has_previous %}
+    <a href="?page={{ user_cardsets.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
   {% endif %}
 
   <span>
-    Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+    Страница {{ user_cardsets.number }} из {{ user_cardsets.paginator.num_pages }}
   </span>
 
-  {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+  {% if user_cardsets.has_next %}
+    <a href="?page={{ user_cardsets.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
   {% endif %}
 </div>
 
