--- a/devshub_project/users/templates/users/users/user_cardsets.html
+++ b/devshub_project/users/templates/users/users/user_cardsets.html
@@ -21,7 +21,7 @@
   </div>
 
   <ul>
-    {% for cardset in page_obj %}
+    {% for cardset in user_cardsets %}
       <li>
         {% render_cardset cardset %}
       </li>
@@ -33,16 +33,16 @@
   </ul>
 
 <div>
-  {% if page_obj.has_previous %}
-    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+  {% if user_cardsets.has_previous %}
+    <a href="?page={{ user_cardsets.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
   {% endif %}
 
   <span>
-    Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+    Страница {{ user_cardsets.number }} из {{ user_cardsets.paginator.num_pages }}
   </span>
 
-  {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+  {% if user_cardsets.has_next %}
+    <a href="?page={{ user_cardsets.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
   {% endif %}
 </div>
 
