--- a/devshub_project/users/templates/users/users/user_projects.html
+++ b/devshub_project/users/templates/users/users/user_projects.html
@@ -18,7 +18,7 @@
   </div>
 
   <ul>
-    {% for project in page_obj %}
+    {% for project in user_projects %}
       <li>
         <h4>
           <a href="{{ project.get_absolute_url }}">
@@ -34,16 +34,16 @@
   </ul>
 
 <div>
-  {% if page_obj.has_previous %}
-    <a href="?page={{ page_obj.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
+  {% if user_projects.has_previous %}
+    <a href="?page={{ user_projects.previous_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Назад</a>
   {% endif %}
 
   <span>
-    Страница {{ page_obj.number }} из {{ page_obj.paginator.num_pages }}
+    Страница {{ user_projects.number }} из {{ user_projects.paginator.num_pages }}
   </span>
 
-  {% if page_obj.has_next %}
-    <a href="?page={{ page_obj.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
+  {% if user_projects.has_next %}
+    <a href="?page={{ user_projects.next_page_number }}&query={{ query }}&sort_by={{ sort_by }}">Вперёд</a>
   {% endif %}
 </div>
 
