--- a/devshub_project/templates/partials/header.html
+++ b/devshub_project/templates/partials/header.html
@@ -15,8 +15,8 @@
         <li><a href="{% url "users:register" %}">Регистрация</a></li>
         <li><a href="{% url "users:login" %}">Войти</a></li>
       {% else %}
-        <li><a href="{% url "users:profile_detail" %}">Мой профиль</a></li>
-        <li><a href="{% url "users:profile_update" %}">Редактировать профиль</a></li>
+        <li><a href="{% url "users:user_detail" request.user.pk %}">Мой профиль</a></li>
+        <li><a href="{% url "users:user_update" request.user.pk %}">Редактировать профиль</a></li>
         <li>
           <form action="{% url "users:logout" %}" method="post">
             {% csrf_token %}
