--- a/devshub_project/users/templates/users/users/user_cards.html
+++ b/devshub_project/users/templates/users/users/user_cards.html
@@ -1,11 +1,13 @@
 {% extends "base.html" %}
 {% load card_tags %}
 
-{% block title %}Карточки {{ user.username }}{% endblock title %}
+{% block title %}
+  {% if is_owner %}Мои карточки{% else %}Карточки {{ user.username }}{% endif %}
+{% endblock title %}
 
 {% block content %}
 
-  <h1>Карточки {{ user.username }}</h1>
+  <h1>{% if is_owner %}Мои Карточки{% else %}Карточки {{ user.username }}{% endif %}</h1>
 
   <div>
     <form method="get">
