--- a/devshub_project/users/templates/users/users/user_cardsets.html
+++ b/devshub_project/users/templates/users/users/user_cardsets.html
@@ -3,11 +3,15 @@
 {% load cardset_tags %}
 
 
-{% block title %}Наборы карточек {{ user.username }}{% endblock title %}
+{% block title %}
+  {% if is_owner %}Мои наборы карточек{% else %}Наборы карточек {{ user.username }}{% endif %}
+{% endblock title %}
 
 {% block content %}
 
-  <h1>Наборы карточек {{ user.username }}</h1>
+  <h1>
+    {% if is_owner %}Мои наборы карточек{% else %}Наборы карточек {{ user.username }}{% endif %}
+  </h1>
 
   <div>
     <form method="get">
@@ -20,10 +24,23 @@
     </form>
   </div>
 
+
   <ul>
     {% for cardset in user_cardsets %}
       <li>
         {% render_cardset cardset %}
+        {% if is_owner %}
+          <form action="{% url "cardsets:cardset_toggle_study" cardset.id %}" method="post" data-js-toggle-save-form>
+            {% csrf_token %}
+            <button type="submit" data-js-toggle-button>
+              {% if cardset.id not in studying_cardsets_ids %}
+                Добавить в изучаемые
+              {% else %}
+                Удалить из изучаемых
+              {% endif %}
+            </button>
+          </form>
+        {% endif %}
       </li>
     {% empty %}
       <li>
@@ -47,3 +64,7 @@
 </div>
 
 {% endblock content %}
+
+{% block scripts %}
+  <script src="{% static "cards/js/form_toggles.js" %}"></script>
+{% endblock scripts %}
