--- a/devshub_project/cards/templates/cards/study/review.html
+++ b/devshub_project/cards/templates/cards/study/review.html
@@ -5,7 +5,7 @@
 
 {% block content %}
 
-<div data-js-review-container data-next-card-url="{% url "study:next_card" %}" data-submit-url="{% url "study:submit" 0 0 %}">
+<div data-js-review-container data-next-card-url="{% url "next_card" %}" data-submit-url="{% url "submit" 0 0 %}">
 
   <div data-js-review-body>
     <div data-js-card-front>
