--- a/devshub_project/users/templates/users/users/user_detail.html
+++ b/devshub_project/users/templates/users/users/user_detail.html
@@ -11,9 +11,9 @@
   </h1>
 
   <div>
-    <a href="{% url "users:user_cards" user.id %}">Карточки</a>
-    <a href="{% url "users:user_cardsets" user.id %}">Наборы карточек</a>
-    <a href="{% url "users:user_projects" user.id %}">Проекты</a>
+    <a href="{% url "user_cards" user.id %}">Карточки</a>
+    <a href="{% url "user_cardsets" user.id %}">Наборы карточек</a>
+    <a href="{% url "user_projects" user.id %}">Проекты</a>
   </div>
 
   <h2>Статистика</h2>
