--- a/devshub_project/users/templates/registration/password_reset_email.html
+++ b/devshub_project/users/templates/registration/password_reset_email.html
@@ -6,7 +6,7 @@
   {% translate "Please go to the following page and choose a new password:" %}
 
   {% block reset_link %}
-    {{ protocol }}://{{ domain }}{% url 'users:password_reset_confirm' uidb64=uid token=token %}
+    {{ protocol }}://{{ domain }}{% url 'password_reset_confirm' uidb64=uid token=token %}
   {% endblock reset_link %}
 
   {% translate 'In case you’ve forgotten, you are:' %} {{ user.get_username }}
